dataset1235/2025-2/2318198438/users/1240871306/executions/2601575092_3530285078.log
== RUN (2025-08-31 19:31:09)
-- CODE: 
x = olá_mundo
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = olá_mundo
        ^^^^^^^^^
NameError: name 'olá_mundo' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = olá_mundo
        ^^^^^^^^^
NameError: name 'olá_mundo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:29:32)
-- CODE: 
x = ola mundo 
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = ola mundo 
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = ola mundo 
            ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:32:49)
-- CODE: 
x= 25
y= 10
print(x + y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:34:09)
-- CODE: 
Mario_Souza= 25
Marcia_Alves= 10
print (Mario_Souza * Marcia_Alves )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
250
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:28:29)
-- CODE: 
print(o"la, mundo")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    print(o"la, mundo")
           ^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    print(o"la, mundo")
           ^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:29:22)
-- CODE: 
x = ola mundo 
print("x")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = ola mundo 
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = ola mundo 
            ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:29:33)
-- CODE: 
x = ola mundo 
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = ola mundo 
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = ola mundo 
            ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:30:49)
-- CODE: 
x = ola_mundo
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = ola_mundo
        ^^^^^^^^^
NameError: name 'ola_mundo' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = ola_mundo
        ^^^^^^^^^
NameError: name 'ola_mundo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:29:23)
-- CODE: 
x = ola mundo 
print("x")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = ola mundo 
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = ola mundo 
            ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:31:50)
-- CODE: 
ola_mundo = x
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ola_mundo = x
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ola_mundo = x
                ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:28:20)
-- CODE: 
print(ola, mundo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(ola, mundo)
          ^^^
NameError: name 'ola' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(ola, mundo)
          ^^^
NameError: name 'ola' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:32:07)
-- CODE: 
ola_mundo = x
print("x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print("x)
          ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print("x)
          ^
SyntaxError: unterminated string literal (detected at line 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:29:08)
-- CODE: 
x = ola mundo 
print("ola mundo")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = ola mundo 
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = ola mundo 
            ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:31:53)
-- CODE: 
ola_mundo = x
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ola_mundo = x
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ola_mundo = x
                ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:28:31)
-- CODE: 
print(o"la, mundo")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    print(o"la, mundo")
           ^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    print(o"la, mundo")
           ^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:30:58)
-- CODE: 
x = olá_mundo
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = olá_mundo
        ^^^^^^^^^
NameError: name 'olá_mundo' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = olá_mundo
        ^^^^^^^^^
NameError: name 'olá_mundo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:30:24)
-- CODE: 
x = input(ola mundo)
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = input(ola mundo)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = input(ola mundo)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:29:52)
-- CODE: 
x = ola mundo 
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = ola mundo 
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    x = ola mundo 
            ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:32:06)
-- CODE: 
ola_mundo = x
print("x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print("x)
          ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print("x)
          ^
SyntaxError: unterminated string literal (detected at line 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:34:00)
-- CODE: 
Mario_Souza= 25
Marcia_Alves= 10
print (Mario_Souza + Marcia_Alves )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:28:41)
-- CODE: 
print("ola mundo")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
ola mundo
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
ola mundo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:34:01)
-- CODE: 
Mario_Souza= 25
Marcia_Alves= 10
print (Mario_Souza + Marcia_Alves )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
